JS quase finalizado

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <td><input class='Desativado' disabled ></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' placeholder="3→" disabled></td>
-                <td><input type="text" id="Campo12"  maxlength="1"></td>
-                <td><input type="text" id="Campo13" maxlength="1"></td>
-                <td><input type="text" id="Campo14" maxlength="1"></td>
+                <td><input type="text" id="Campo12"  maxlength="1" onkeyup="verifica(2)"></td>
+                <td><input type="text" id="Campo13" maxlength="1" onkeyup="verifica(2)" onkeyup="verifica(3)"></td>
+                <td><input type="text" id="Campo14" maxlength="1" onkeyup="verifica(2)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -62,7 +62,7 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo16' maxlength="1"></td>
+                <td><input type="text" id='Campo16' maxlength="1" onkeyup="verifica(3)"></td>
                 <td><input class='Desativado' disabled ></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -84,14 +84,14 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo18' maxlength="1"></td>
+                <td><input type="text" id='Campo18' maxlength="1" onkeyup="verifica(3)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' placeholder="5→" disabled></td>
-                <td><input type="text" id='Campo19' maxlength="1" onkeyup="verifica(1)"></td>
-                <td><input type="text" id='Campo20' maxlength="1"></td>
+                <td><input type="text" id='Campo19' maxlength="1" onkeyup="verifica(1)" onkeyup="verifica(4)"></td>
+                <td><input type="text" id='Campo20' maxlength="1" onkeyup="verifica(4)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -106,7 +106,7 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo21' maxlength="1"></td>
+                <td><input type="text" id='Campo21' maxlength="1" onkeyup="verifica(3)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -128,13 +128,13 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo23' maxlength="1"></td>
+                <td><input type="text" id='Campo23' maxlength="1" onkeyup="verifica(3)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' placeholder='6→' disabled></td>
-                <td><input type="text" id='Campo24' maxlength="1"></td>
+                <td><input type="text" id='Campo24' maxlength="1" onkeyup="verifica(5)"></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo25' maxlength="1" onkeyup="verifica(1)"></td>
+                <td><input type="text" id='Campo25' maxlength="1" onkeyup="verifica(1)" onkeyup="verifica(5)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -150,15 +150,15 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' placeholder='7→' disabled></td>
-                <td><input type="text" id='Campo26' maxlength="1"></td>
-                <td><input type="text" id='Campo27' maxlength="1"></td>
+                <td><input type="text" id='Campo26' maxlength="1" onkeyup="verifica(3)" onkeyup="verifica(6)"></td>
+                <td><input type="text" id='Campo27' maxlength="1" onkeyup="verifica(6)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input type="text" id='Campo28' maxlength="1"></td>
                 <td><input class='numero' placeholder='8→' disabled></td>
-                <td><input type="text" id='Campo29' maxlength="1" onkeyup="verifica(1)"></td>
-                <td><input type="text" id='Campo30' maxlength="1"></td>
-                <td><input type="text" id='Campo31' maxlength="1"></td>
+                <td><input type="text" id='Campo29' maxlength="1" onkeyup="verifica(1)" onkeyup="verifica(7)"></td>
+                <td><input type="text" id='Campo30' maxlength="1" onkeyup="verifica(7)"></td>
+                <td><input type="text" id='Campo31' maxlength="1" onkeyup="verifica(7)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -172,13 +172,13 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo32' maxlength="1"></td>
+                <td><input type="text" id='Campo32' maxlength="1" onkeyup="verifica(3)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' placeholder='9→' disabled></td>
-                <td><input type="text" id='Campo33' maxlength="1"></td>
-                <td><input type="text" id='Campo34' maxlength="1"></td>
-                <td><input type="text" id='Campo35' maxlength="1" onkeyup="verifica(1)"></td>
+                <td><input type="text" id='Campo33' maxlength="1" onkeyup="verifica(5)" onkeyup="verifica(8)"></td>
+                <td><input type="text" id='Campo34' maxlength="1" onkeyup="verifica(8)"></td>
+                <td><input type="text" id='Campo35' maxlength="1" onkeyup="verifica(1)" onkeyup="verifica(8)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -196,8 +196,8 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='espaco' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input class='numero' placeholder='10↓' disabled></td>
-                <td><input type="text" id='Campo37' maxlength="1"></td>
+                <td><input class='numero' placeholder='10→' disabled></td>
+                <td><input type="text" id='Campo37' maxlength="1" onkeyup="verifica(9)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input type="text" id='Campo38' maxlength="1" onkeyup="verifica(1)"></td>
@@ -216,15 +216,15 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' disabled placeholder="11→"></td>
-                <td><input type="text" id='Campo39' maxlength="1"></td>
-                <td><input type="text" id='Campo40' maxlength="1"></td>
-                <td><input type="text" id='Campo41'maxlength="1"></td>
-                <td><input type="text" id='Campo42' maxlength="1"></td>
+                <td><input type="text" id='Campo39' maxlength="1" onkeyup="verifica(3)" onkeyup="verifica(10)"></td>
+                <td><input type="text" id='Campo40' maxlength="1" onkeyup="verifica(10)"></td>
+                <td><input type="text" id='Campo41'maxlength="1" onkeyup="verifica(10)"></td>
+                <td><input type="text" id='Campo42' maxlength="1" onkeyup="verifica(9)" onkeyup="verifica(10)"></td>
                 <td><input class='espaco' disabled></td>
-                <td><input type="text" id='Campo43' maxlength="1"></td>
-                <td><input type="text" id='Campo44' maxlength="1" onkeyup="verifica(1)"></td>
-                <td><input type="text" id='Campo45' maxlength="1"></td>
-                <td><input type="text" id='Campo46' maxlength="1"></td>
+                <td><input type="text" id='Campo43' maxlength="1" onkeyup="verifica(10)"></td>
+                <td><input type="text" id='Campo44' maxlength="1" onkeyup="verifica(1)" onkeyup="verifica(10)"></td>
+                <td><input type="text" id='Campo45' maxlength="1" onkeyup="verifica(10)"></td>
+                <td><input type="text" id='Campo46' maxlength="1" onkeyup="verifica(10)"></td>
                 <td><input class='numero' disabled placeholder="12↓"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -238,16 +238,16 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo47' maxlength="1"></td>
+                <td><input type="text" id='Campo47' maxlength="1" onkeyup="verifica(3)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo48' maxlength="1"></td>
+                <td><input type="text" id='Campo48' maxlength="1" onkeyup="verifica(9)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input type="text" id='Campo49' maxlength="1" onkeyup="verifica(1)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo50' maxlength="1"></td>
+                <td><input type="text" id='Campo50' maxlength="1" onkeyup="verifica(11)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -256,20 +256,20 @@
             </tr>
             <tr>
                 <!-- Linha 11 -->
-                <td><input type="text" id='Campo51' maxlength="1"></td>
-                <td><input type="text" id='Campo52' maxlength="1"></td>
-                <td><input type="text" id='Campo53' maxlength="1"></td>
-                <td><input type="text" id='Campo54' maxlength="1"></td>
+                <td><input type="text" id='Campo51' maxlength="1" onkeyup="verifica(12)"></td>
+                <td><input type="text" id='Campo52' maxlength="1" onkeyup="verifica(12)"></td>
+                <td><input type="text" id='Campo53' maxlength="1" onkeyup="verifica(12)"></td>
+                <td><input type="text" id='Campo54' maxlength="1" onkeyup="verifica(12)"></td>
                 <td><input class='espaco' disabled></td>
-                <td><input type="text" id='Campo56' maxlength="1"></td>
-                <td><input type="text" id='Campo57' maxlength="1"></td>
-                <td><input type="text" id='Campo58' maxlength="1"></td>
+                <td><input type="text" id='Campo56' maxlength="1" onkeyup="verifica(12)"></td>
+                <td><input type="text" id='Campo57' maxlength="1" onkeyup="verifica(12)"></td>
+                <td><input type="text" id='Campo58' maxlength="1" onkeyup="verifica(9)" onkeyup="verifica(12)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' disabled placeholder="14→"></td>
-                <td><input type="text" id='Campo59' maxlength="1" onkeyup="verifica(1)"></td>
-                <td><input type="text" id='Campo60' maxlength="1"></td>
-                <td><input type="text" id='Campo61' maxlength="1"></td>
-                <td><input type="text" id='Campo62' maxlength="1"></td>
+                <td><input type="text" id='Campo59' maxlength="1" onkeyup="verifica(1)" onkeyup="verifica(13)"></td>
+                <td><input type="text" id='Campo60' maxlength="1" onkeyup="verifica(13)"></td>
+                <td><input type="text" id='Campo61' maxlength="1" onkeyup="verifica(13)"></td>
+                <td><input type="text" id='Campo62' maxlength="1" onkeyup="verifica(11)" onkeyup="verifica(13)"></td>
                 <td><input type="text" id='Campo63' maxlength="1"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -282,16 +282,16 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo64' maxlength="1"></td>
+                <td><input type="text" id='Campo64' maxlength="1" onkeyup="verifica(3)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo65' maxlength="1"></td>
+                <td><input type="text" id='Campo65' maxlength="1" onkeyup="verifica(9)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input type="text" id='Campo66' maxlength="1" onkeyup="verifica(1)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo67' maxlength="1"></td>
+                <td><input type="text" id='Campo67' maxlength="1" onkeyup="verifica(11)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -304,7 +304,7 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo68' maxlength="1"></td>
+                <td><input type="text" id='Campo68' maxlength="1" onkeyup="verifica(3)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -325,8 +325,8 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' placeholder="15→" disabled></td>
-                <td><input type="text" id='Campo69' maxlength="1"></td>
-                <td><input type="text" id='Campo70' maxlength="1"></td>
+                <td><input type="text" id='Campo69' maxlength="1" onkeyup="verifica(14)"></td>
+                <td><input type="text" id='Campo70' maxlength="1" onkeyup="verifica(3)" onkeyup="verifica(14)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -348,7 +348,7 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo71' maxlength="1"></td>
+                <td><input type="text" id='Campo71' maxlength="1" onkeyup="verifica(3)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -368,15 +368,15 @@
                 <!-- Linha 16 -->
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' placeholder="16→" disabled></td>
-                <td><input type="text" id='Campo72' maxlength="1"></td>
-                <td><input type="text" id='Campo73' maxlength="1"></td>
-                <td><input type="text" id='Campo74' maxlength="1"></td>
-                <td><input type="text" id='Campo75' maxlength="1"></td>
+                <td><input type="text" id='Campo72' maxlength="1" onkeyup="verifica(15)"></td>
+                <td><input type="text" id='Campo73' maxlength="1" onkeyup="verifica(15)"></td>
+                <td><input type="text" id='Campo74' maxlength="1" onkeyup="verifica(3)" onkeyup="verifica(15)"></td>
+                <td><input type="text" id='Campo75' maxlength="1" onkeyup="verifica(15)"></td>
                 <td><input class='espaco' disabled></td>
-                <td><input type="text" id='Campo76' maxlength="1"></td>
-                <td><input type="text" id='Campo77' maxlength="1"></td>
-                <td><input type="text" id='Campo78' maxlength="1"></td>
-                <td><input type="text" id='Campo79' maxlength="1"></td>
+                <td><input type="text" id='Campo76' maxlength="1" onkeyup="verifica(15)"></td>
+                <td><input type="text" id='Campo77' maxlength="1" onkeyup="verifica(15)"></td>
+                <td><input type="text" id='Campo78' maxlength="1" onkeyup="verifica(15)"></td>
+                <td><input type="text" id='Campo79' maxlength="1" onkeyup="verifica(15)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
