adição da função que faltava no 13

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 <td><input class='espaco' disabled></td>
                 <td><input type="text" id='Campo56' maxlength="1" onkeyup="verifica(12)"></td>
                 <td><input type="text" id='Campo57' maxlength="1" onkeyup="verifica(12)"></td>
-                <td><input type="text" id='Campo58' maxlength="1" onkeyup="verifica(9)" onkeyup="verifica(12)"></td>
+                <td><input type="text" id='Campo58' maxlength="1" onkeyup="verifica(9), verifica(12)" onkeyup="verifica(12)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' disabled placeholder="14→"></td>
                 <td><input type="text" id='Campo59' maxlength="1" onkeyup="verifica(1)" onkeyup="verifica(13)"></td>
