correção das funcções que faltavam

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                 <td><input type="text" id='Campo60' maxlength="1" onkeyup="verifica(13)"></td>
                 <td><input type="text" id='Campo61' maxlength="1" onkeyup="verifica(13)"></td>
                 <td><input type="text" id='Campo62' maxlength="1" onkeyup="verifica(11)" onkeyup="verifica(13)"></td>
-                <td><input type="text" id='Campo63' maxlength="1"></td>
+                <td><input type="text" id='Campo63' maxlength="1" onkeyup="verifica(13)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -326,7 +326,7 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' placeholder="15→" disabled></td>
                 <td><input type="text" id='Campo69' maxlength="1" onkeyup="verifica(14)"></td>
-                <td><input type="text" id='Campo70' maxlength="1" onkeyup="verifica(3)" onkeyup="verifica(14)"></td>
+                <td><input type="text" id='Campo70' maxlength="1" onkeyup="verifica(3), verifica(14)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -370,7 +370,7 @@
                 <td><input class='numero' placeholder="16→" disabled></td>
                 <td><input type="text" id='Campo72' maxlength="1" onkeyup="verifica(15)"></td>
                 <td><input type="text" id='Campo73' maxlength="1" onkeyup="verifica(15)"></td>
-                <td><input type="text" id='Campo74' maxlength="1" onkeyup="verifica(3)" onkeyup="verifica(15)"></td>
+                <td><input type="text" id='Campo74' maxlength="1" onkeyup="verifica(3), verifica(15)"></td>
                 <td><input type="text" id='Campo75' maxlength="1" onkeyup="verifica(15)"></td>
                 <td><input class='espaco' disabled></td>
                 <td><input type="text" id='Campo76' maxlength="1" onkeyup="verifica(15)"></td>
