Pular o input ja preenchido

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input class='numero' placeholder='2↓' disabled></td>
+                <td><input class='numero' placeholder='2→' disabled></td>
                 <td><input type="text"  id="Campo15" maxlength="1" onkeyup="verifica(1)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
