--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' placeholder="4↓" disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input class='Desativado' placeholder="1→" disabled></td>
+                <td><input class='numero' placeholder="1→" disabled></td>
                 <td><input type="text" id="Campo1" maxlength="1" onkeyup="verifica(0)"></td>
                 <td><input type="text" id="Campo2" maxlength="1" onkeyup="verifica(0)"></td>
                 <td><input type="text" id="Campo3" maxlength="1" onkeyup="verifica(0)"></td>
