mete marcha luquinha

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <td><input type="text" id="Campo1" maxlength="1" onkeyup="verifica(0)"></td>
                 <td><input type="text" id="Campo2" maxlength="1" onkeyup="verifica(0)"></td>
                 <td><input type="text" id="Campo3" maxlength="1" onkeyup="verifica(0)"></td>
-                <td><input type="text" id="Campo4" maxlength="1" onkeyup="verifica(0)" onkeyup="verifica(1)"></td>
+                <td><input type="text" id="Campo4" maxlength="1" onkeyup="verifica(0),verifica(1)"></td>
                 <td><input type="text" id="Campo5" maxlength="1" onkeyup="verifica(0)"></td>
                 <td><input type="text" id="Campo6" maxlength="1" onkeyup="verifica(0)"></td>
                 <td><input type="text" id="Campo7" maxlength="1" onkeyup="verifica(0)"></td>
@@ -40,7 +40,7 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' placeholder="3→" disabled></td>
                 <td><input type="text" id="Campo12"  maxlength="1" onkeyup="verifica(2)"></td>
-                <td><input type="text" id="Campo13" maxlength="1" onkeyup="verifica(2)" onkeyup="verifica(3)"></td>
+                <td><input type="text" id="Campo13" maxlength="1" onkeyup="verifica(2),verifica(3)"></td>
                 <td><input type="text" id="Campo14" maxlength="1" onkeyup="verifica(2)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -154,7 +154,7 @@
                 <td><input type="text" id='Campo27' maxlength="1" onkeyup="verifica(6)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo28' maxlength="1"></td>
+                <td><input type="text" id='Campo28' maxlength="1" onkeyup="verifica(5)"></td>
                 <td><input class='numero' placeholder='8→' disabled></td>
                 <td><input type="text" id='Campo29' maxlength="1" onkeyup="verifica(1)" onkeyup="verifica(7)"></td>
                 <td><input type="text" id='Campo30' maxlength="1" onkeyup="verifica(7)"></td>
