Cruzadinha com todas as perguntas funcionando independentes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <td><input type="text" id="Campo1" maxlength="1" onkeyup="verifica(0)"></td>
                 <td><input type="text" id="Campo2" maxlength="1" onkeyup="verifica(0)"></td>
                 <td><input type="text" id="Campo3" maxlength="1" onkeyup="verifica(0)"></td>
-                <td><input type="text" id="Campo4" maxlength="1" onkeyup="verifica(0),verifica(1)"></td>
+                <td><input type="text" id="Campo4" maxlength="1" onkeyup="verifica(0), verifica(1)"></td>
                 <td><input type="text" id="Campo5" maxlength="1" onkeyup="verifica(0)"></td>
                 <td><input type="text" id="Campo6" maxlength="1" onkeyup="verifica(0)"></td>
                 <td><input type="text" id="Campo7" maxlength="1" onkeyup="verifica(0)"></td>
@@ -90,7 +90,7 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' placeholder="5→" disabled></td>
-                <td><input type="text" id='Campo19' maxlength="1" onkeyup="verifica(1)" onkeyup="verifica(4)"></td>
+                <td><input type="text" id='Campo19' maxlength="1" onkeyup="verifica(1), verifica(4)"></td>
                 <td><input type="text" id='Campo20' maxlength="1" onkeyup="verifica(4)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -134,7 +134,7 @@
                 <td><input class='numero' placeholder='6→' disabled></td>
                 <td><input type="text" id='Campo24' maxlength="1" onkeyup="verifica(5)"></td>
                 <td><input class='Desativado' disabled></td>
-                <td><input type="text" id='Campo25' maxlength="1" onkeyup="verifica(1)" onkeyup="verifica(5)"></td>
+                <td><input type="text" id='Campo25' maxlength="1" onkeyup="verifica(1), verifica(5)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -150,13 +150,13 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' placeholder='7→' disabled></td>
-                <td><input type="text" id='Campo26' maxlength="1" onkeyup="verifica(3)" onkeyup="verifica(6)"></td>
+                <td><input type="text" id='Campo26' maxlength="1" onkeyup="verifica(3), verifica(6)"></td>
                 <td><input type="text" id='Campo27' maxlength="1" onkeyup="verifica(6)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input type="text" id='Campo28' maxlength="1" onkeyup="verifica(5)"></td>
                 <td><input class='numero' placeholder='8→' disabled></td>
-                <td><input type="text" id='Campo29' maxlength="1" onkeyup="verifica(1)" onkeyup="verifica(7)"></td>
+                <td><input type="text" id='Campo29' maxlength="1" onkeyup="verifica(1), verifica(7)"></td>
                 <td><input type="text" id='Campo30' maxlength="1" onkeyup="verifica(7)"></td>
                 <td><input type="text" id='Campo31' maxlength="1" onkeyup="verifica(7)"></td>
                 <td><input class='Desativado' disabled></td>
@@ -176,9 +176,9 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' placeholder='9→' disabled></td>
-                <td><input type="text" id='Campo33' maxlength="1" onkeyup="verifica(5)" onkeyup="verifica(8)"></td>
+                <td><input type="text" id='Campo33' maxlength="1" onkeyup="verifica(5), verifica(8)"></td>
                 <td><input type="text" id='Campo34' maxlength="1" onkeyup="verifica(8)"></td>
-                <td><input type="text" id='Campo35' maxlength="1" onkeyup="verifica(1)" onkeyup="verifica(8)"></td>
+                <td><input type="text" id='Campo35' maxlength="1" onkeyup="verifica(1), verifica(8)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
@@ -216,13 +216,13 @@
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' disabled placeholder="11→"></td>
-                <td><input type="text" id='Campo39' maxlength="1" onkeyup="verifica(3)" onkeyup="verifica(10)"></td>
+                <td><input type="text" id='Campo39' maxlength="1" onkeyup="verifica(3), verifica(10)"></td>
                 <td><input type="text" id='Campo40' maxlength="1" onkeyup="verifica(10)"></td>
                 <td><input type="text" id='Campo41'maxlength="1" onkeyup="verifica(10)"></td>
-                <td><input type="text" id='Campo42' maxlength="1" onkeyup="verifica(9)" onkeyup="verifica(10)"></td>
+                <td><input type="text" id='Campo42' maxlength="1" onkeyup="verifica(9), verifica(10)"></td>
                 <td><input class='espaco' disabled></td>
                 <td><input type="text" id='Campo43' maxlength="1" onkeyup="verifica(10)"></td>
-                <td><input type="text" id='Campo44' maxlength="1" onkeyup="verifica(1)" onkeyup="verifica(10)"></td>
+                <td><input type="text" id='Campo44' maxlength="1" onkeyup="verifica(1), verifica(10)"></td>
                 <td><input type="text" id='Campo45' maxlength="1" onkeyup="verifica(10)"></td>
                 <td><input type="text" id='Campo46' maxlength="1" onkeyup="verifica(10)"></td>
                 <td><input class='numero' disabled placeholder="12↓"></td>
@@ -263,13 +263,13 @@
                 <td><input class='espaco' disabled></td>
                 <td><input type="text" id='Campo56' maxlength="1" onkeyup="verifica(12)"></td>
                 <td><input type="text" id='Campo57' maxlength="1" onkeyup="verifica(12)"></td>
-                <td><input type="text" id='Campo58' maxlength="1" onkeyup="verifica(9), verifica(12)" onkeyup="verifica(12)"></td>
+                <td><input type="text" id='Campo58' maxlength="1" onkeyup="verifica(9), verifica(12)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='numero' disabled placeholder="14→"></td>
-                <td><input type="text" id='Campo59' maxlength="1" onkeyup="verifica(1)" onkeyup="verifica(13)"></td>
+                <td><input type="text" id='Campo59' maxlength="1" onkeyup="verifica(1), verifica(13)"></td>
                 <td><input type="text" id='Campo60' maxlength="1" onkeyup="verifica(13)"></td>
                 <td><input type="text" id='Campo61' maxlength="1" onkeyup="verifica(13)"></td>
-                <td><input type="text" id='Campo62' maxlength="1" onkeyup="verifica(11)" onkeyup="verifica(13)"></td>
+                <td><input type="text" id='Campo62' maxlength="1" onkeyup="verifica(11), verifica(13)"></td>
                 <td><input type="text" id='Campo63' maxlength="1" onkeyup="verifica(13)"></td>
                 <td><input class='Desativado' disabled></td>
                 <td><input class='Desativado' disabled></td>
